섹션 6.8 OOP 마무리
객체지향 마무리 + 약간의 추가 학습( struct와 class 차이, static 사용 방법 및 용도/예시) 학습

--- a/CPP_Study2/6_8_OOP_Final/6_8_OOP_Final/6_8_OOP_Final.vcxproj
+++ b/CPP_Study2/6_8_OOP_Final/6_8_OOP_Final/6_8_OOP_Final.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
-    <ProjectGuid>{37BFCAE5-DA71-4574-B933-ECCAE6F212AF}</ProjectGuid>
-    <RootNamespace>My67OperatorOverloading</RootNamespace>
+    <ProjectGuid>{C109E14A-FA6A-44DE-9832-FA4A275D0568}</ProjectGuid>
+    <RootNamespace>My68OOPFinal</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
