--- a/GameServerProgramming/실습코드/IOCP_실습자료/IOCP_GameServer/IOCP_GameServer/IOCP_GameServer.vcxproj
+++ b/GameServerProgramming/실습코드/IOCP_실습자료/IOCP_GameServer/IOCP_GameServer/IOCP_GameServer.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{9cf7201f-3387-4b16-852d-ee9b7179fd11}</ProjectGuid>
-    <RootNamespace>ChessServer</RootNamespace>
+    <ProjectGuid>{29e122db-c902-4304-bff5-78ca003efb5e}</ProjectGuid>
+    <RootNamespace>IOCPGameServer</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,7 +139,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Server.cpp" />
+    <ClInclude Include="protocol.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="IOCPServer.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
