--- a/GameServerProgramming/실습코드/Stress_Test/Simple2DClient/Simple2DClient/Simple2DClient.vcxproj.filters
+++ b/GameServerProgramming/실습코드/Stress_Test/Simple2DClient/Simple2DClient/Simple2DClient.vcxproj.filters
@@ -36,7 +36,7 @@
     </Font>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\IOCP_GameServer\IOCP_GameServer\protocol.h">
+    <ClInclude Include="..\..\IOCPGameServer\IOCPGameServer\protocol.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
