--- a/GameServerProgramming/실습코드/데이터베이스/DB_TEST/DB_TEST/DB_TEST.vcxproj.filters
+++ b/GameServerProgramming/실습코드/데이터베이스/DB_TEST/DB_TEST/DB_TEST.vcxproj.filters
@@ -15,29 +15,8 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="2dClient.cpp">
+    <ClCompile Include="db_read.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Image Include="chess2.png">
-      <Filter>리소스 파일</Filter>
-    </Image>
-    <Image Include="chessmap.bmp">
-      <Filter>리소스 파일</Filter>
-    </Image>
-  </ItemGroup>
-  <ItemGroup>
-    <Font Include="cour.ttf">
-      <Filter>리소스 파일</Filter>
-    </Font>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\..\IOCPGameServer\IOCPGameServer\protocol.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
   </ItemGroup>
 </Project>
