240709 텀프_프레임워크보완
클라이언트 및 서버 프레임워크 보완 작업(클라이언트 UI, 패킷 수정 및 보완). 공격 및 상태변경 컨텐츠 추가 필요

--- a/GameServerProgramming/TermProject/Simple2DClient/Simple2DClient/Simple2DClient.vcxproj
+++ b/GameServerProgramming/TermProject/Simple2DClient/Simple2DClient/Simple2DClient.vcxproj
@@ -126,6 +126,7 @@
   </ItemGroup>
   <ItemGroup>
     <Font Include="cour.ttf" />
+    <Font Include="Galmuri7.ttf" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\TermProjectServer\TermProjectServer\protocol.h" />
