--- a/GameServerProgramming/TermProject/Simple2DClient/Simple2DClient/Simple2DClient.vcxproj.filters
+++ b/GameServerProgramming/TermProject/Simple2DClient/Simple2DClient/Simple2DClient.vcxproj.filters
@@ -34,6 +34,9 @@
     <Font Include="cour.ttf">
       <Filter>리소스 파일</Filter>
     </Font>
+    <Font Include="Galmuri7.ttf">
+      <Filter>리소스 파일</Filter>
+    </Font>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\TermProjectServer\TermProjectServer\protocol.h">
