240728_서버 전체 코드 모듈화 및 클라이언트 코드 수정 작업
서버 코드 전체 모듈화 작업 및 클라이언트 작업 일부 수정 작업.
(Player, Monster, NPC 타입 구분 작업 진행)

--- a/GameServerProgramming/TermProject/TermProjectServer/TermProjectServer/TermProjectServer.vcxproj.filters
+++ b/GameServerProgramming/TermProject/TermProjectServer/TermProjectServer/TermProjectServer.vcxproj.filters
@@ -39,9 +39,33 @@
     <ClInclude Include="protocol.h">
       <Filter>헤더 파일\protocol</Filter>
     </ClInclude>
+    <ClInclude Include="Datas.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="EnumList.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="DatabaseManager.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="PacketManager.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="DBConstants.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="IOCPServer.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="DatabaseManager.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="PacketManager.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="DBConstants.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
