--- a/GameServerProgramming/TermProject/TermProjectServer/TermProjectServer/TermProjectServer.vcxproj.filters
+++ b/GameServerProgramming/TermProject/TermProjectServer/TermProjectServer/TermProjectServer.vcxproj.filters
@@ -1,10 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="소스 파일">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
     <Filter Include="헤더 파일">
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;hm;inl;inc;ipp;xsd</Extensions>
@@ -18,6 +14,10 @@
     </Filter>
     <Filter Include="헤더 파일\protocol">
       <UniqueIdentifier>{41d93986-d030-4f9b-aaba-fbe24305f6ad}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="리소스 파일\소스 파일">
+      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
+      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -57,16 +57,16 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="IOCPServer.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>리소스 파일\소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="DatabaseManager.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>리소스 파일\소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="PacketManager.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>리소스 파일\소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="DBConstants.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>리소스 파일\소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
